# fastsmtp

./: .gitignore  Dockerfile  PLAN.md  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml  test.yml
deploy/k8s/: configmap.yaml  deployment.yaml  ingress.yaml  namespace.yaml  pdb.yaml  secret.yaml  service.yaml
docs/: CODE_REVIEW_TASKS.md
docs/plans/: 2026-01-06-delivery-log-retention.md
fastsmtp/: pyproject.toml
fastsmtp-cli/: pyproject.toml
fastsmtp-cli/src/fastsmtp_cli/: __init__.py  config.py  main.py
fastsmtp-cli/src/fastsmtp_cli/commands/: config.py  domains.py  operations.py  recipients.py  rules.py
fastsmtp-cli/tests/: test_cli_config.py  test_client.py  test_commands.py  test_output.py
fastsmtp/alembic/: env.py
fastsmtp/alembic/versions/: 001_initial_schema.py  002_add_delivery_log_indexes.py  003_add_soft_delete_columns.py
fastsmtp/docs/plans/: 2026-01-08-s3-attachment-storage-design.md  2026-01-08-s3-attachment-storage-implementation.md
fastsmtp/src/fastsmtp/: __init__.py  cli.py  config.py  crypto.py  main.py
fastsmtp/src/fastsmtp/api/: __init__.py  auth.py  domains.py  operations.py  recipients.py  router.py  rules.py  users.py
fastsmtp/src/fastsmtp/auth/: __init__.py  dependencies.py  keys.py
fastsmtp/src/fastsmtp/cleanup/: __init__.py  service.py  worker.py
fastsmtp/src/fastsmtp/db/: enums.py  models.py  session.py
fastsmtp/src/fastsmtp/metrics/: __init__.py  definitions.py  middleware.py
fastsmtp/src/fastsmtp/middleware/: __init__.py  logging.py  rate_limit.py
fastsmtp/src/fastsmtp/rules/: conditions.py  engine.py
fastsmtp/src/fastsmtp/schemas/: __init__.py  common.py  recipient.py  rule.py  user.py
fastsmtp/src/fastsmtp/smtp/: __init__.py  rate_limiter.py  server.py  tls.py  validation.py
fastsmtp/src/fastsmtp/storage/: __init__.py  s3.py
fastsmtp/src/fastsmtp/webhook/: __init__.py  dispatcher.py  queue.py  url_validator.py
fastsmtp/tests/: conftest.py  test_api_auth_extended.py  test_api_domains.py  test_api_domains_extended.py  test_api_health.py  test_api_operations_extended.py  test_api_recipients.py  test_api_recipients_extended.py  test_api_rules.py  test_api_rules_extended.py  test_api_unit.py  test_api_users.py  test_api_users_extended.py  test_auth_error_paths.py  test_auth_keys.py  test_cleanup.py  test_config.py  test_e2e_smtp_flow.py  test_encryption.py  test_rate_limiting.py  test_rules_engine.py  test_settings_cache.py  test_smtp_integration.py  test_smtp_s3_integration.py  test_smtp_server.py  test_smtp_server_extended.py  test_smtp_tls.py  test_smtp_validation.py  test_soft_deletes.py  test_storage_s3.py  test_url_validator.py  test_webhook.py
