[project]
name = "fastsmtp-workspace"
version = "0.1.0"
requires-python = ">=3.12"

[dependency-groups]
dev = [
    "aiosqlite>=0.20",
    "bumpver>=2025.1131",
    "httpx>=0.28",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=4.0",
    "respx>=0.21",
    "ruff>=0.4",
]

[tool.uv.workspace]
members = ["fastsmtp", "fastsmtp-cli"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "ASYNC"]
ignore = ["B008"]  # Allow function calls in default arguments (FastAPI Depends pattern)

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.bumpver]
current_version = "0.1.0"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "chore: bump version {old_version} -> {new_version}"
tag_message = "v{new_version}"
tag = true
push = false
commit = true

[tool.bumpver.file_patterns]
"pyproject.toml" = ['version = "{version}"']
"fastsmtp/pyproject.toml" = ['version = "{version}"']
"fastsmtp-cli/pyproject.toml" = ['version = "{version}"']
"fastsmtp/src/fastsmtp/__init__.py" = ['__version__ = "{version}"']
"fastsmtp-cli/src/fastsmtp_cli/__init__.py" = ['__version__ = "{version}"']
