[project]
name = "fastsmtp-cli"
version = "0.1.3"
description = "Remote CLI client for FastSMTP server"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.14",
    "httpx>=0.28",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "rich>=13.9",
    "tomli-w>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "respx>=0.21",
    "ruff>=0.8",
]

[project.scripts]
fsmtp = "fastsmtp_cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fastsmtp_cli"]
